--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,319 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Crazybaby</title>
+    <link rel="icon" href="//cdn.crazybaby.com.cn/assets/images/icons/favicon.ico?v=2019091101">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header">
+      <div class="container header__container">
+        <a href="#">
+          <img
+          src="./images/logo.svg"
+          alt="logo"
+          class="header__logo logo"
+          >
+        </a>
+
+        <div class="header__control">
+          <a href="#" class="header__specs">Specs</a>
+
+          <div class="header__translate">
+            <a href="#" class="header__en">EN /</a>
+            <a href="#" class="header__ua">UA</a>
+          </div>
+
+          <button class="header__buy">Buy</button>
+        </div>
+
+        <input
+          class="header__togler"
+          type="checkbox"
+          name="mobile-togler"
+          id="mobile-togler"
+        >
+        <ul class="mobile-menu">
+          <li class="mobile-menu__item">
+            <a href="#promo" class="mobile-menu__link">Our story</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a href="#design" class="mobile-menu__link">About us</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a href="#technology" class="mobile-menu__link">Technology</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a href="#features" class="mobile-menu__link">Features</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a href="#questions" class="mobile-menu__link">Get in touch</a>
+          </li>
+        </ul>
+        <label for="mobile-togler" class="header__mobile-burger mobile-burger">
+          <span class="mobile-burger_1 mobile-burger__item"></span>
+          <span class="mobile-burger_2 mobile-burger__item"></span>
+          <span class="mobile-burger_3 mobile-burger__item"></span>
+        </label>
+      </div>
+    </header>
+
+    <main>
+      <section class="device container">
+        <div class="device__description">
+          <h1 class="device__description_title">Futuristic wireless speaker</h1>
+          <img
+            src="./images/icons/buy-icon.svg"
+            alt="buy"
+            class="device__buy"
+          >
+          <p class="device__description_about">
+            Luna's performance is balanced and smooth in all frequency reages which makes the music both naturally pleasant and distinctly more layered.
+          </p>
+        </div>
+
+        <div class="device__photo"></div>
+      </section>
+
+      <section class="presentation container">
+        <div class="presentation__row">
+          <div class="presentation__item description-block">
+            <img
+              src="./images/icons/1.svg"
+              alt="1"
+              class="description-block__icon"
+            >
+            <p class="description-block__name">
+              Futuristic Design
+            </p>
+            <p class="description-block__description ">
+              To give Luna a truly flawless look, we specifically picked aircraft grade aluminum as its material and adopted both three-dimensional stretch-bending technology and a high precision cold forging technique.
+            </p>
+          </div>
+
+          <div class="presentation__item description-block description-block_none">
+            <img
+              src="./images/icons/2.svg"
+              alt="1"
+              class="description-block__icon"
+            >
+            <p class="description-block__name">
+              Tweeter Speaker System
+            </p>
+            <p class="description-block__description">
+              To deliver a more layered sound performance better than a sole full-range speaker, our team equipped Luna with one more tweeter speaker responsible for high-frequency sound independently.
+            </p>
+          </div>
+
+          <div class="presentation__item description-block description-block_none">
+            <img
+              src="./images/icons/3.svg"
+              alt="1"
+              class="description-block__icon"
+            >
+            <p class="description-block__name">
+              Multiroom System
+            </p>
+            <p class="description-block__description">
+              Luna is natively compatible with your home Wi-Fi. Set up multiple speakers in different rooms to expand your music experience into the entire house.
+            </p>
+          </div>
+
+          <div class="presentation__item description-block description-block_none">
+            <img
+              src="./images/icons/4.svg"
+              alt="1"
+              class="description-block__icon"
+            >
+            <p class="description-block__name">
+              Intuitive Lighting System
+            </p>
+            <p class="description-block__description">
+              An intuitive user interface allows you to adjust the hue and saturation of color for lighting that fits any mood and situation.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="promo" id="promo">
+        <div class="promo__video">
+          <input
+            type="checkbox"
+            class="promo__togler"
+            id="promo__togler"
+          >
+
+          <label for="promo__togler" class="promo__play"></label>
+
+          <iframe
+            class="promo__youtube"
+            width="100%"
+            height="100%"
+            src="https://www.youtube.com/embed/J49hDugk8jM"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          >
+          </iframe>
+        </div>
+      </section>
+
+      <section class="design" id="design">
+        <div class="design__map"></div>
+        <div class="design__text">
+          <h2 class="design__title">
+            <span class="design__title_nowrap">Designed for </span> <br> <span class="design__title_nowrap">the future</span>
+          </h2>
+
+          <div class="design__map-mobile"></div>
+
+          <p class="design__description">
+            In 2014, a group of geeky industrial designers, engineering veterans and acoustic experts formed crazybaby. This is a bunch of passionate people who are crazy enough to think they can challenge the industry with disruptive audio products.
+          </p>
+          <a href="#" class="design__see-more">See more about us</a>
+        </div>
+      </section>
+
+      <section class="technology container" id="technology">
+        <h2 class="technology__title">Technology</h2>
+
+        <div class="technology__inside">
+          <img
+          src="../src/images/device-inside.jpg"
+          alt=""
+          class="technology__photo"
+        >
+        </div>
+
+        <div class="technology__review review">
+          <p class="review__text">
+            It reallytook me by surprise honestly to have such full beautiful sound that coming out of this small compact device. And with the brush aluminium surfacem it feels so familiar. Like my iPhone.
+          </p>
+
+          <div class="review__background"></div>
+
+          <div class="review__person-photo">
+            <img
+              src="./images/reviewer.svg"
+              alt="garret marint"
+              class="review__person-photo_scale"
+            >
+          </div>
+
+          <div class="review__name">Garret Martin</div>
+          <div class="review__position">Creative Director</div>
+        </div>
+      </section>
+
+      <section class="features container" id="features">
+        <h2 class="features__title">Features</h2>
+        <div class="features__background-grey">
+          <img
+            src="./images/features-sound-desktop.svg"
+            alt="sound"
+            class="features__photo"
+          >
+          <img
+            src="./images/features-sound-mobile.svg"
+            alt="sound"
+            class="features__photo_mobile"
+          >
+        </div>
+
+        <div class="features__sound feature-block">
+          <h3 class="feature-block__title">Sound & music</h3>
+          <ul class="feature-block__list">
+            <li class="feature-block__item">Feel-in-chest Base Power</li>
+            <li class="feature-block__item">Lossless Digital Audio Transmission</li>
+            <li class="feature-block__item">Easy & Stable Stereo Pairing</li>
+            <li class="feature-block__item">Crisp and Clear High Frequency Sound</li>
+            <li class="feature-block__item">Streams from Cloud Music and Local Library</li>
+            <li class="feature-block__item">Auto Music Playback from Last Song Stopped</li>
+          </ul>
+        </div>
+
+        <div class="features__connect feature-block feature-block_none">
+          <h3 class="feature-block__title">Connectivity</h3>
+          <ul class="feature-block__list">
+            <li class="feature-block__item">Hands Free Wireless Audio</li>
+            <li class="feature-block__item">Bluetooth 4.0 LE</li>
+            <li class="feature-block__item">Wi-Fi 2.4 GHz (802.11 b/g/n)</li>
+            <li class="feature-block__item">Smart Multiroom System Set Up</li>
+            <li class="feature-block__item">Party Mode with 6.0 Units and above</li>
+            <li class="feature-block__item">Powerful MESHNET Multi Speaker Network</li>
+          </ul>
+        </div>
+
+        <div class="features__app feature-block feature-block_none">
+          <h3 class="feature-block__title">App Features</h3>
+          <ul class="feature-block__list">
+            <li class="feature-block__item">Customize Music Schedule</li>
+            <li class="feature-block__item">Wake Up with Favorite Songs</li>
+            <li class="feature-block__item">Home Detection Auto Wake Up</li>
+            <li class="feature-block__item">Color Wheel & Saturation Change</li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="question container" id="questions">
+        <h2 class="question__title">Do you have any <br> questions?</h2>
+
+        <form
+          action="#"
+          method="post"
+          class="question__form"
+        >
+          <input
+            class="question__email"
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Your email"
+            required
+          >
+          <textarea
+            class="question__message"
+            name="message"
+            id="message"
+            cols="30"
+            rows="10"
+            placeholder="Your message..."
+            required
+         ></textarea>
+          <button class="question__send-btn">Send</button>
+        </form>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div id="particles-js" class="footer__part">
+        <a href="#" class="footer__logo">
+          <img
+            src="../src/images/logo.svg"
+            alt="logo"
+          >
+        </a>
+
+        <a href="#" class="footer__go-up"></a>
+
+        <div class="footer__networks">
+          <a href="#" class="footer__facebook">
+            <img src="./images/icons/facebook-color.svg" alt="facebook">
+          </a>
+          <a href="#" class="footer__twitter">
+            <img src="./images/icons/twitter-color.svg" alt="twitter">
+          </a>
+          <a href="#" class="footer__instagram">
+            <img src="./images/icons/instagram-color.svg" alt="instagram">
+          </a>
+        </div>
+
+        <p class="footer__right">
+          &#169; 2019 All rights reserved. Terms of Use & Privacy Policy
+        </p>
+      </div>
+    </footer>
+
+    <script type="text/javascript" src="../particles.js"></script>
+    <script type="text/javascript" src="../app.js"></script>
   </body>
 </html>
