changed form method

--- a/src/index.html
+++ b/src/index.html
@@ -260,8 +260,8 @@
         <h2 class="question__title">Do you have any <br> questions?</h2>
 
         <form
-          action="#"
-          method="post"
+          action=""
+          method="get"
           class="question__form"
         >
           <input
